js262/test/language/statements/class/elements/syntax/early-errors/private-method-cannot-escape-token.js


/*---
description: The pound signal in the private method cannot be escaped (class declaration)
esid: prod-ClassElement
features: [class-methods-private, class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    PrivateName::
      # IdentifierName

    U+0023 is the escape sequence for #

---*/


$DONOTEVALUATE();

class C {
  \u0023m() { return 42; }
}
